crates/kernel/tests/unit/snapshots/main__unit__effects_snapshot__a_track_ending_auto_advances_to_the_next_one.snap
---
source: crates/kernel/tests/unit/effects_snapshot.rs
assertion_line: 110
expression: effects(cmd)
---
[
    Audio(
        Load(
            TrackLoad {
                path: "/tmp/track1.flac",
                decibels: None,
                revision: Revision(
                    1,
                ),
            },
        ),
    ),
    Library(
        Disk(
            AppendHistory(
                HistoryEntry {
                    track_source: Local(
                        "/tmp/track1.flac",
                    ),
                    title: "track1",
                    artist: None,
                    played_at: Moment(
                        0ns,
                    ),
                },
            ),
        ),
    ),
    Macos(
        NowPlaying(
            Some(
                Track {
                    source: Local(
                        "/tmp/track1.flac",
                    ),
                    tags: Tags {
                        title: None,
                        artist: None,
                        album: None,
                        album_artist: None,
                        date: None,
                        genre: None,
                        track_number: None,
                        track_total: None,
                        disc: None,
                        composer: None,
                        comment: None,
                        lyrics: None,
                    },
                    audio_format: AudioFormat {
                        format: None,
                        bitrate: None,
                        sample_rate: None,
                        bits_per_sample: None,
                        channels: None,
                        decibels: None,
                    },
                    display: "track1.flac",
                    tagging: Tagged(
                        100s,
                    ),
                },
            ),
        ),
    ),
    Audio(
        SetPlayback(
            Playing,
        ),
    ),
    Macos(
        SetPlayback(
            Playing,
        ),
    ),
    Animate(
        TrackChanged,
    ),
    Animate(
        PlaybackChanged(
            Play,
        ),
    ),
]
