crates/kernel/tests/unit/snapshots/main__unit__effects_snapshot__adjusting_a_custom_row_emits_its_effect.snap
---
source: crates/kernel/tests/unit/effects_snapshot.rs
expression: effects(cmd)
---
[
    Config(
        Setting {
            id: SettingId(
                3,
            ),
            option: OptionIndex(
                1,
            ),
        },
    ),
]
