crates/kernel/tests/unit/snapshots/main__unit__effects_snapshot__library_loaded_emits_its_effects.snap
---
source: crates/kernel/tests/unit/effects_snapshot.rs
expression: effects(cmd)
---
[
    Animate(
        LibraryOpened,
    ),
]
