crates/kernel/tests/unit/snapshots/main__unit__effects_snapshot__stepping_an_appearance_row_emits_its_effect.snap
---
source: crates/kernel/tests/unit/effects_snapshot.rs
expression: effects(cmd)
---
[
    Config(
        Setting {
            field: SpeedChip,
            option: OptionIndex(
                1,
            ),
        },
    ),
]
