crates/kernel/tests/unit/snapshots/main__unit__effects_snapshot__theme_reloaded_emits_its_effect.snap
---
source: crates/kernel/tests/unit/effects_snapshot.rs
expression: effects(cmd)
---
[
    Animate(
        ThemeChanged,
    ),
]
