crates/kernel/tests/unit/snapshots/main__unit__effects_snapshot__toggling_from_stopped_starts_the_track.snap
---
source: crates/kernel/tests/unit/effects_snapshot.rs
assertion_line: 36
expression: effects(cmd)
---
[
    Audio(
        Stop,
    ),
    Audio(
        Load(
            TrackLoad {
                path: "/tmp/track0.flac",
                gain: None,
                revision: Revision(
                    1,
                ),
            },
        ),
    ),
    Library(
        Disk(
            AppendHistory(
                HistoryEntry {
                    track: Local(
                        "/tmp/track0.flac",
                    ),
                    title: "track0",
                    artist: None,
                    at: Moment(
                        0ns,
                    ),
                },
            ),
        ),
    ),
    Macos(
        NowPlaying(
            Some(
                Track {
                    source: Local(
                        "/tmp/track0.flac",
                    ),
                    tags: Tags {
                        title: None,
                        artist: None,
                        album: None,
                        album_artist: None,
                        date: None,
                        genre: None,
                        track: None,
                        track_total: None,
                        disc: None,
                        composer: None,
                        comment: None,
                        lyrics: None,
                    },
                    audio_format: AudioFormat {
                        format: None,
                        bitrate: None,
                        sample_rate: None,
                        bits_per_sample: None,
                        channels: None,
                        replay_gain: None,
                    },
                    display: "track0",
                    tagging: Listed(
                        None,
                    ),
                },
            ),
        ),
    ),
    Audio(
        SetPlayback(
            Playing,
        ),
    ),
    Macos(
        SetPlayback(
            Playing,
        ),
    ),
    Animate(
        TrackChanged,
    ),
    Animate(
        PlaybackChanged(
            Play,
        ),
    ),
]
